--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="sv">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
 
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
     <section class="content">
@@ -21,8 +23,8 @@
     </section>
 
     <section class="image">
-        <img src="/images/cinema.webp"Platshållarbild">
-        <!-- <img src="https://placehold.jp/900x900.png" alt="Platshållarbild"> -->
+        <img src="./images/cinema.webp" Platshållarbild">
     </section>
 </body>
+
 </html>
